deployments/kubernetes/namespace-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coding-challange
  labels:
    app.kubernetes.io/part-of: coding-challange
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
  labels:
    app.kubernetes.io/part-of: coding-challange
    name: sandbox
